2004-11-03  Mark D. Baushke  <mdb@cvshome.org>

	* cvsnt.dsp: Add readlink.c, xreadlink.c and xreadlink.h.
	* cvsnt.dep: Add readlink.c and xreadlink.c dependencies.
	
	* gnulib-update (MODULES): Add readlink xreadlink.
	* Makefile.in, aclocal.m4, configure, configure.in, gnulib.txt:
	Regenerated.

2004-11-02  Mark D. Baushke  <mdb@cvshome.org>

	* config.h.in, configure: Regenerated.

2004-11-01  Conrad T. Pino  <Conrad@Pino.com>

	* cvsnt.dep: Regenerated for "lib/libcvs.dsp" change.

2004-11-01  Derek Price  <derek@ximbiot.com>

	* NEWS: Note new date format documentation.

2004-11-01  Derek Price  <derek@ximbiot.com>

	* NEWS: Note that CVS handles new time zones.

2004-11-01  Derek Price  <derek@ximbiot.com>

	* srclist.txt: Remove getdate module.

2004-11-01  Derek Price  <derek@ximbiot.com>

	* gnulib-update (MODULES): Add allocsa, setenv, getdate.

2004-10-30  Mark D. Baushke  <mdb@juniper.net>

	* configure.in: Add AC_SEARCH_LIBS for hstrerror in resolv to also
	define HAVE_HSTRERROR if it is found.
	* configure: Regenerated.

2004-10-29  Mark D. Baushke  <mdb@cvshome.org>

	* configure.in: Add AC_SEARCH_LIBS for hstrerror in resolv.
	* configure: Regenerated.
	
2004-10-29  Derek Price  <derek@ximbiot.com>

	* NEWS: Note xreadlink fix.

2004-10-26  Conrad T. Pino  <Conrad@Pino.com>

	* cvsnt.dsp: Add "lib/yesno.h" to project.
	* cvsnt.dep: Regenerate for "cvsnt.dsp" change.

2004-10-26  Derek Price  <derek@ximbiot.com>

	* NEWS: Note GSSAPI error message fix.

2004-10-25  Derek Price  <derek@ximbiot.com>

	* gnulib-update (MODULES): Add yesno.

2004-10-23  Conrad T. Pino  <Conrad@Pino.com>

	* cvsnt.dep: Regenerate for "lib/libcvs.dsp" change.

2004-10-22  Mark D. Baushke  <mdb@cvshome.org>

	* cvsnt.dsp: Add "windows-NT/stdint.h" to project.
	* cvsnt.dep: Regenerated.

2004-10-22  Mark D. Baushke  <mdb@cvshome.org>

	* configure: Regenerated.

2004-10-22  Conrad T. Pino  <Conrad@Pino.com>

	* cvsnt.dsp: Add "lib/strftime.h" to project.