@@ -194,7 +194,7 @@ have the same versions the developers do, so the rules to run them
 automatically aren't included in the generated Makefiles unless you run
 configure with --enable-maintainer-mode.
 
-The CVS Makefiles and configure script were built using Automake 1.9.2 and
+The CVS Makefiles and configure script were built using Automake 1.9.3 and
 Autoconf 2.59, respectively.
 
 There is a known bug in Autoconf 2.57 that will prevent the configure
