@@ -1,3 +1,7 @@
+2004-11-03  Derek Price  <derek@ximbiot.com>
+
+	* HACKING, NEWS: Note new Autoconf & Automake versions.
+
 2004-11-03  Mark D. Baushke  <mdb@cvshome.org>
 
 	* cvsnt.dsp: Add readlink.c, xreadlink.c and xreadlink.h.
